# ssi

./: .gitignore  CMakeLists.txt  INSTALL  README  README.md  setup_python.cmd  setup_python310.cmd  setup_python37.cmd  setup_python38.cmd  ssi_core.v12.sln  ssi_core.v14.sln  ssi_plugins.v12.sln  ssi_plugins.v14.sln  ssi_ui.v12.sln  ssi_ui.v14.sln
core/: CMakeLists.txt  LICENSE.TINYXML  README
core/include/: SSI_Cons.h  SSI_Debug.h  SSI_Define.h  SSI_LeakWatcher.h  SSI_SkeletonCons.h  SSI_Tools.h  r250.h  ssi.h
core/include/base/: AndroidApp.h  Array1D.h  Factory.h  IAnnotation.h  ICanvas.h  IChannel.h  IColormap.h  IComponent.h  IConsumer.h  IContinuousModel.h  IEvents.h  IFeature.h  IFilter.h  IFusion.h  IMessage.h  IModel.h  IMonitor.h  INotify.h  IObject.h  IOptions.h  IPainter.h  IProvider.h  IRunnable.h  ISamples.h  ISelection.h  ISensor.h  ITheEventBoard.h  ITheFramework.h  IThePainter.h  ITransformable.h  ITransformer.h  IWaitable.h  IWindow.h  IWindowManager.h  IXMLPipeline.h  Random.h  String.h  StringList.h
core/include/buffer/: Buffer.h  TimeBuffer.h
core/include/event/: EventAddress.h  EventList.h  IESelect.h
core/include/graphic/: BabyGrid.h  Button.h  Canvas.h  CheckBox.h  Colormap.h  ComboBox.h  Console.h  DialogLibGateway.h  GraphicTools.h  Grid.h  Monitor.h  MonitorFallback.h  PaintData.h  Painter.h  SDL_Canvas.h  SDL_Monitor.h  SDL_Painter.h  SDL_Window.h  SDL_WindowManager.h  Slider.h  SystemTray.h  Tab.h  TextBox.h  Window.h  WindowFallback.h
core/include/model/: Annotation.h  ModelTools.h  SampleList.h
core/include/signal/: Matrix.h  MatrixOps.h  SignalCons.h  SignalTools.h  mathext.h
core/include/struct/: BinTree.h  Queue.h
core/include/thread/: ClockThread.h  Condition.h  Event.h  Lock.h  Mutex.h  RunAsThread.h  Thread.h  ThreadLibCons.h  ThreadPool.h  ThreadSafe.h  Timer.h
core/source/: SSI_Global.cpp  r250.c
core/source/base/: Factory.cpp  Random.cpp  String.cpp  StringList.cpp
core/source/buffer/: Buffer.cpp  TimeBuffer.cpp
core/source/event/: EventAddress.cpp  EventList.cpp  IESelect.cpp
core/source/graphic/: BabyGrid.cpp  Button.cpp  Canvas.cpp  CheckBox.cpp  Colormap.cpp  ComboBox.cpp  Console.cpp  DialogLibGateway.cpp  GraphicTools.cpp  Grid.cpp  Monitor.cpp  PaintData.cpp  Painter.cpp  SDL_Canvas.cpp  SDL_Monitor.cpp  SDL_Painter.cpp  SDL_Window.cpp  SDL_WindowManager.cpp  Slider.cpp  SystemTray.cpp  Tab.cpp  TextBox.cpp  Window.cpp  WindowFallback.cpp
core/source/model/: Annotation.cpp  ModelTools.cpp  SampleList.cpp
core/source/signal/: MatrixOps.cpp  SignalTools.cpp
core/source/struct/: BinTree.cpp  Queue.cpp
core/source/thread/: ClockThread.cpp  Condition.cpp  Event.cpp  Lock.cpp  Mutex.cpp  RunAsThread.cpp  Thread.cpp  ThreadPool.cpp  ThreadSafe.cpp  Timer.cpp
core/source/web/: WebTools.cpp
core/test/: CMakeLists.txt
core/test/factory/: CMakeLists.txt  Main.cpp  MyObject.cpp  MyObject.h
core/test/option/: CMakeLists.txt  Main.cpp
core/test/serialize/: CMakeLists.txt  Main.cpp
core/test/struct/: CMakeLists.txt  Main.cpp
core/test/thread/: CMakeLists.txt  Clock.h  Counter.h  Dequeuer.h  Enqueuer.h  Listener.h  ListenerInterface.h  Main.cpp  PrintJob.h  Printer.h  Store.h  Supplier.h  TalkingThread.h  Trigger.h  User.h
core/tools/: CMakeLists.txt
core/tools/xmlchain/: CMakeLists.txt  Main.cpp
core/tools/xmlpipe/: CMakeLists.txt  Main.cpp
plugins/: CMakeLists.txt
plugins/artk+/: README
plugins/artk+/include/: ARTKPlusPainter.h  ARTKPlusSelector.h  ARTKPlusTools.h  ARTKPlusTracker.h  ARTKPlusWriter.h  ssiartkplus.h
plugins/artk+/pipes/: artkplus.pipeline  markerboard_1-20.cfg
plugins/artk+/source/: ARTKPlusPainter.cpp  (+5 more)
plugins/audio/: CMakeLists.txt  README
plugins/avi/: README
plugins/azurekinect/: INSTALL  README
plugins/azurekinectmulti/: .gitignore  README
plugins/biosig/: CMakeLists.txt  README
plugins/browser/: README
plugins/camera/: README
plugins/control/: README
plugins/dialog/: README
plugins/dspfilters/: LICENSE.DSPFILTERS  README
plugins/ehealth/: INSTALL  README
plugins/emosim/: README
plugins/emotext/: README
plugins/emovoice/: CMakeLists.txt  README
plugins/event/: CMakeLists.txt  README
plugins/eventinterpreter/: README
plugins/eyesig/: README
plugins/fastDTW/: CMakeLists.txt  LICENSE_FastDTW-x  README  README_FastDTW-x.md
plugins/ffmpeg/: CMakeLists.txt  LICENSE.FFMPEG  README
plugins/frame/: CMakeLists.txt  README
plugins/fubi/: README
plugins/fusion/: CMakeLists.txt  README
plugins/gazetracker/: README
plugins/graphic/: CMakeLists.txt  README
plugins/image/: README
plugins/iom/: README
plugins/ioput/: CMakeLists.txt  README
plugins/json/: README
plugins/keyboard/: README
plugins/liblinear/: CMakeLists.txt  README
plugins/libsox/: README
plugins/libsvm/: README
plugins/microsoftkinect/: INSTALL  README
plugins/microsoftkinect2/: INSTALL  README
plugins/model/: CMakeLists.txt  LICENSE.ARFFREADER  README
plugins/mouse/: CMakeLists.txt
plugins/mqtt/: CMakeLists.txt
plugins/msspeech/: README  README_links.txt  README_recognizers.txt
plugins/openface/: CMakeLists.txt  README
plugins/openface2/: CMakeLists.txt  README
plugins/openpose/: README  svn_ignore.txt
plugins/opensmile/: CMakeLists.txt  README
plugins/opensmilewrapper/: README
plugins/praat/: README
plugins/python/: CMakeLists.txt  INSTALL  LICENSE.PYTHON  README
plugins/python310/: CMakeLists.txt  README
plugins/python38/: CMakeLists.txt  INSTALL
plugins/realsense/: README
plugins/sensingtex/: CMakeLists.txt  README
plugins/shimmer3/: INSTALL  README.md
plugins/signal/: CMakeLists.txt  README
plugins/skeleton/: README
plugins/theeyetribe/: INSTALL  LICENSE.THEEYETRIBE  README
plugins/tobii/: INSTALL  README
plugins/torch/: LICENSE.TORCH  README
plugins/vad_webrtc/: README
plugins/vectorfusion/: README
plugins/websocket/: CMakeLists.txt  README
plugins/weka/: INSTALL  README
plugins/wiimote/: LICENSE.WIIYOURSELF  README
plugins/winsensors/: README
plugins/xmpp/: CMakeLists.txt  README
(+3622 files in other folders)
